--- a/Android/UDOOMobileTanker/app/src/main/AndroidManifest.xml
+++ b/Android/UDOOMobileTanker/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
                  android:icon="@drawable/ic_launcher"
                  android:theme="@style/AppTheme">
         <activity
-                android:name=".OpenCVActivity"
+                android:name=".TankerActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
