--- a/Android/UDOOMobileTanker/app/src/main/AndroidManifest.xml
+++ b/Android/UDOOMobileTanker/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="me.mariotti.udoomobiletanker">
+          package="me.mariotti.tanker">
 
     <application android:allowBackup="true"
                  android:label="@string/app_name"
                  android:icon="@drawable/ic_launcher"
                  android:theme="@style/AppTheme">
         <activity
-                android:name=".TankActivity"
+                android:name="me.mariotti.tanker.TankActivity"
                 android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
