--- a/Android/UDOOMobileTanker/libraries/opencv/build.gradle
+++ b/Android/UDOOMobileTanker/libraries/opencv/build.gradle
@@ -1,17 +1,17 @@
-apply plugin: 'android-library'
+apply plugin: 'com.android.library'
 
 buildscript {
     repositories {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:0.12.2'
+        classpath 'com.android.tools.build:gradle:1.0.0'
     }
 }
 
 android {
     compileSdkVersion 18
-    buildToolsVersion "21.0.1"
+    buildToolsVersion "21.1.1"
 
     defaultConfig {
         minSdkVersion 8
