--- a/Android/UDOOMobileTanker/app/src/main/AndroidManifest.xml
+++ b/Android/UDOOMobileTanker/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
                  android:theme="@style/AppTheme">
         <activity
                 android:name="me.mariotti.tanker.TankActivity"
-                android:label="@string/app_name">
+                android:label="@string/app_name"
+                android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
