--- a/Android/UDOOMobileTanker/app/src/main/AndroidManifest.xml
+++ b/Android/UDOOMobileTanker/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
                  android:icon="@drawable/ic_launcher"
                  android:theme="@style/AppTheme">
         <activity
-                android:name="me.mariotti.tanker.TankActivity"
+                android:name=".RobotActivity"
                 android:label="@string/app_name"
                 android:theme="@android:style/Theme.Holo.Light.NoActionBar.Fullscreen">
             <intent-filter>
